# mikrosdk_click_v2

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md
clicks/10dof/: CMakeLists.txt  DETAILS.md  README.md  memake.txt
clicks/10dof/example/: CMakeLists.txt  main.c  manifest.exm  memake.txt
clicks/10dof/lib/: memake.txt
clicks/10dof/lib_c10dof/: CMakeLists.txt
clicks/1x4rgb/: CMakeLists.txt  README.md  details.md
clicks/1x4rgb/example/: CMakeLists.txt  main.c  manifest.exm
clicks/1x4rgb/lib_c1x4rgb/: CMakeLists.txt
clicks/2x20wamp/: CMakeLists.txt  README.md  details.md  memake.txt
clicks/2x20wamp/example/: CMakeLists.txt  main.c  manifest.exm  memake.txt
clicks/2x20wamp/lib/: memake.txt
clicks/2x20wamp/lib_c2x20wamp/: CMakeLists.txt
clicks/2x2key/: CMakeLists.txt  DETAILS.md  README.md  memake.txt
clicks/2x2key/example/: CMakeLists.txt  main.c  manifest.exm  memake.txt
clicks/2x2key/lib/: memake.txt
clicks/2x2key/lib_c2x2key/: CMakeLists.txt
clicks/2x2rgb/: CMakeLists.txt  README.md  details.md
clicks/2x2rgb/example/: CMakeLists.txt  main.c  manifest.exm
clicks/2x2rgb/lib_c2x2rgb/: CMakeLists.txt
clicks/3dhall4/: CMakeLists.txt  README.md  details.md
clicks/3dhall4/example/: CMakeLists.txt  main.c  manifest.exm
clicks/3dhall4/lib_c3dhall4/: CMakeLists.txt
clicks/3dhall9/: CMakeLists.txt  README.md  details.md  memake.txt
clicks/3dhall9/example/: CMakeLists.txt  main.c  manifest.exm  memake.txt
clicks/3dhall9/lib/: memake.txt
clicks/3dhall9/lib_c3dhall9/: CMakeLists.txt
clicks/3gsara/: CMakeLists.txt  DETAILS.md  README.md  memake.txt
clicks/3gsara/example/: CMakeLists.txt  main.c  manifest.exm  memake.txt
clicks/3gsara/lib/: memake.txt
clicks/3gsara/lib_c3gsara/: CMakeLists.txt
clicks/3xbuck/: CMakeLists.txt  DETAILS.md  README.md  memake.txt
clicks/3xbuck/example/: CMakeLists.txt  main.c  manifest.exm  memake.txt
clicks/3xbuck/lib/: memake.txt
clicks/3xbuck/lib_c3xbuck/: CMakeLists.txt
clicks/420mar/: CMakeLists.txt  DETAILS.md  README.md  memake.txt
clicks/420mar/example/: CMakeLists.txt  main.c  main.c~  manifest.exm  memake.txt
clicks/420mar/lib/: memake.txt
clicks/420mar/lib_c420mar/: CMakeLists.txt
clicks/420mat/: CMakeLists.txt  DETAILS.md  README.md  memake.txt
clicks/420mat/example/: CMakeLists.txt  main.c  manifest.exm  memake.txt
clicks/420mat/lib/: memake.txt
clicks/420mat/lib_c420mat/: CMakeLists.txt
clicks/4glte2data/: CMakeLists.txt  README.md  details.md
clicks/4glte2data/example/: CMakeLists.txt  main.c  manifest.exm
clicks/4glte2data/lib_c4glte2data/: CMakeLists.txt
clicks/4glteapj/: CMakeLists.txt  README.md  details.md  memake.txt
clicks/4glteapj/example/: CMakeLists.txt  main.c  manifest.exm  memake.txt
clicks/4glteapj/lib/: memake.txt
clicks/4glteapj/lib_c4glteapj/: CMakeLists.txt
clicks/4gltee/: CMakeLists.txt  README.md  details.md  memake.txt
clicks/4gltee/example/: CMakeLists.txt  main.c  manifest.exm  memake.txt
clicks/4gltee/lib/: memake.txt
clicks/4gltee/lib_c4gltee/: CMakeLists.txt
clicks/4gltegnss/: CMakeLists.txt  README.md  details.md
clicks/4gltegnss/example/: CMakeLists.txt  main.c  manifest.exm
clicks/4gltegnss/lib_c4gltegnss/: CMakeLists.txt
clicks/4gltena/: CMakeLists.txt  README.md  details.md  memake.txt
clicks/4gltena/example/: CMakeLists.txt  main.c  manifest.exm  memake.txt
clicks/4gltena/lib/: memake.txt
clicks/4gltena/lib_c4gltena/: CMakeLists.txt
clicks/4x4rgb2/: CMakeLists.txt  README.md  details.md
clicks/4x4rgb2/example/: CMakeLists.txt  main.c  manifest.exm
clicks/4x4rgb2/lib_c4x4rgb2/: CMakeLists.txt
clicks/7x10b/: CMakeLists.txt  README.md  details.md  memake.txt
clicks/7x10b/example/: CMakeLists.txt  main.c  manifest.exm  memake.txt
clicks/7x10b/lib/: memake.txt
clicks/7x10b/lib_c7x10b/: CMakeLists.txt
clicks/8800retro/: CMakeLists.txt  README.md  details.md  memake.txt
clicks/8800retro/example/: CMakeLists.txt  main.c  manifest.exm  memake.txt
clicks/8800retro/lib/: memake.txt
clicks/8800retro/lib_c8800retro/: CMakeLists.txt
clicks/8pini2c/: CMakeLists.txt  DETAILS.md  README.md  memake.txt
clicks/8pini2c/example/: CMakeLists.txt  main.c  manifest.exm  memake.txt
clicks/8pini2c/lib/: memake.txt
clicks/8pini2c/lib_c8pini2c/: CMakeLists.txt
clicks/8x8g/: CMakeLists.txt  README.md  details.md  memake.txt
clicks/8x8g/example/: CMakeLists.txt  main.c  manifest.exm  memake.txt
clicks/8x8g/lib/: memake.txt
clicks/8x8g/lib_c8x8g/: CMakeLists.txt
clicks/8x8r/: CMakeLists.txt  README.md  details.md  memake.txt
clicks/8x8r/example/: CMakeLists.txt  main.c  manifest.exm  memake.txt
clicks/8x8r/lib/: memake.txt
clicks/8x8r/lib_c8x8r/: CMakeLists.txt
clicks/8x8y/: CMakeLists.txt  README.md  details.md  memake.txt
clicks/8x8y/example/: CMakeLists.txt  main.c  manifest.exm  memake.txt
clicks/8x8y/lib/: memake.txt
clicks/8x8y/lib_c8x8y/: CMakeLists.txt
clicks/9dof2/: CMakeLists.txt  DETAILS.md  README.md  memake.txt
clicks/9dof2/example/: CMakeLists.txt  main.c  manifest.exm  memake.txt
clicks/9dof2/lib/: memake.txt
clicks/9dof2/lib_c9dof2/: CMakeLists.txt
clicks/9dof3/: CHANGELOG.md  CMakeLists.txt  DETAILS.md  README.md  memake.txt
clicks/9dof3/example/: CMakeLists.txt  main.c  manifest.exm  memake.txt
clicks/9dof3/lib/: memake.txt
clicks/9dof3/lib_c9dof3/: CMakeLists.txt
clicks/accel18/: CMakeLists.txt  README.md  details.md  memake.txt
clicks/accel18/example/: CMakeLists.txt  main.c  manifest.exm  memake.txt
clicks/accel18/lib/: memake.txt
clicks/accel18/lib_accel18/: CMakeLists.txt
clicks/accel6/: CMakeLists.txt  DETAILS.md  README.md  memake.txt
clicks/accel6/example/: CMakeLists.txt  main.c  manifest.exm  memake.txt
clicks/accel6/lib/: memake.txt
clicks/accel6/lib_accel6/: CMakeLists.txt
clicks/accelqvar/: CMakeLists.txt  README.md  details.md
clicks/accelqvar/example/: CMakeLists.txt  main.c  (+1 more)
clicks/accurrent/: CMakeLists.txt  DETAILS.md  README.md  memake.txt
clicks/adapter/: CMakeLists.txt  DETAILS.md  README.md  memake.txt
(+28920 files in other folders)
